@@ -1,3 +1,4 @@
+
 setClass("GenomicMethylSet",
          representation(preprocessMethod = "character", annotation = "character"),
          contains = "SummarizedExperiment")
